@@ -2,17 +2,16 @@ package suite.ansi;
 
 import java.io.Closeable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.jna.Native;
 
 import suite.adt.Trie;
 import suite.adt.pair.Pair;
-import suite.streamlet.Signal;
-import suite.streamlet.Signal.Redirector;
 import suite.streamlet.Outlet;
 import suite.streamlet.Read;
+import suite.streamlet.Signal;
+import suite.streamlet.Signal.Redirector;
 import suite.util.FunUtil.Sink;
 import suite.util.FunUtil.Source;
 
@@ -31,10 +30,10 @@ public class Keyboard implements Closeable {
 
 	public Keyboard() {
 		List<Pair<List<Integer>, VK>> pairs = new ArrayList<>();
-		pairs.add(Pair.of(Arrays.asList(27, 91, 65), VK.UP___));
-		pairs.add(Pair.of(Arrays.asList(27, 91, 66), VK.DOWN_));
-		pairs.add(Pair.of(Arrays.asList(27, 91, 68), VK.LEFT_));
-		pairs.add(Pair.of(Arrays.asList(27, 91, 67), VK.RIGHT));
+		pairs.add(Pair.of(List.of(27, 91, 65), VK.UP___));
+		pairs.add(Pair.of(List.of(27, 91, 66), VK.DOWN_));
+		pairs.add(Pair.of(List.of(27, 91, 68), VK.LEFT_));
+		pairs.add(Pair.of(List.of(27, 91, 67), VK.RIGHT));
 
 		trie = new Trie<>();
 
