@@ -1,7 +1,7 @@
 package suite.ip;
 
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.util.List;
 
 import suite.Suite;
 import suite.asm.StackAssembler;
@@ -27,7 +27,7 @@ public class ImperativeCompiler {
 
 	public Bytes compile(int org, Path path) {
 		String s0 = To.string(path);
-		String s1 = Preprocess.transform(Arrays.asList(new IncludePreprocessor(path.getParent())), s0).t0;
+		String s1 = Preprocess.transform(List.of(new IncludePreprocessor(path.getParent())), s0).t0;
 		return compile(org, s1);
 	}
 
