@@ -5,6 +5,7 @@ import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -48,7 +49,7 @@ public class Cache {
 	}
 
 	public <I> I proxy(Class<I> interface_, I object) {
-		return proxy(interface_, object, new HashSet<>(Arrays.asList(interface_.getMethods())));
+		return proxy(interface_, object, new HashSet<>(List.of(interface_.getMethods())));
 	}
 
 	public <I> I proxyByMethodNames(Class<I> interface_, I object, Set<String> methodNames) {
