@@ -21,7 +21,7 @@ public class FunctionalTemplateRendererTest {
 		List<Node> fruits = Arrays.<Node> asList(new Str("orange"), new Str("apple"), new Str("pear"));
 
 		Map<String, Node> map = Read //
-				.from2(Arrays.asList( //
+				.from2(List.of( //
 						Pair.of("list", Tree.of(TermOp.OR____, fruits)), //
 						Pair.of("title", new Str("My favourite things"))) //
 				) //
