@@ -2,7 +2,6 @@ package suite.sample;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -15,13 +14,13 @@ public class ChrTest {
 
 	@Test
 	public void test() {
-		Chr chr = chr(Arrays.asList( //
+		Chr chr = chr(List.of( //
 				"if (LE.x .x,) then () end" //
 				, "if (LE .x .y, LE .y .x,) then (.x = .y,) end" //
 				, "given (LE .x .y,) if (LE .x .y,) then () end" //
 				, "given (LE .x .y, LE .y .z,) if () then (LE .x .z,) end"));
 
-		List<Node> facts = Arrays.asList(Suite.parse("LE A B"), Suite.parse("LE B C"), Suite.parse("LE C A"));
+		List<Node> facts = List.of(Suite.parse("LE A B"), Suite.parse("LE B C"), Suite.parse("LE C A"));
 		Collection<Node> facts1 = chr.chr(facts);
 		assertEquals(2, facts1.size());
 		System.out.println(facts1);
